added junit dependency

--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,17 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--		add model mapper dependency-->
+
+<!--		add junit support-->
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.8.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!--		add model mapper dependency-->
 
 		<dependency>
 			<groupId>org.modelmapper</groupId>
